Refactor tests to improve readability and consistency; replace direct byte reading with IOTools utility methods